docker compose added for frontend only.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,57 +3,27 @@ events {
 }
 
 http {
-
   access_log /var/log/nginx/access.log;
   error_log /var/log/nginx/error.log;
   keepalive_timeout 65;
   default_type application/octet-stream;
-
   upstream dominate {
     server dominate:9010;
-#    server dominate_2:9010;
-  }
-
-  server {
-    listen 80 default_server;
-
-    server_name _;
-
-    return 301 https://$host$request_uri;
   }
 
   # server {
-  #   #listen [::]:80 ipv6only=on;
-  #   listen 443 ssl;
-  #   ssl_certificate /etc/ssl/cert_chain.crt;
-  #   ssl_certificate_key /etc/ssl/server.key;
-  #   sendfile on;
-
-  #   default_type application/octet-stream;
-  #   gzip on;
-  #   gzip_http_version 1.1;
-  #   gzip_disable      "MSIE [1-6]\.";
-  #   gzip_min_length   1000;
-  #   gzip_vary         on;
-  #   gzip_proxied      expired no-cache no-store private auth;
-  #   gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  #   gzip_comp_level   9;
-  #   root   /usr/share/nginx/html;
-  #   index  index.html index.htm;
-  #   include /etc/nginx/mime.types;
-  #   server_name dominate.ai;
-  #   return 301 https://upbeat-brattain-385075.netlify.com$request_uri;
+  #   listen 80 default_server;
+  #   server_name _;
+  #   return 301 https://$host$request_uri;
   # }
+
+
   server {
 
-    #listen [::]:80 ipv6only=on;
-    listen 443 ssl;
-    ssl_certificate /etc/ssl/fullchain.pem;
-    ssl_certificate_key /etc/ssl/privkey.pem;
+    listen 80 default_server;
+    server_name _;
     sendfile on;
-
     default_type application/octet-stream;
-
     gzip on;
     gzip_http_version 1.1;
     gzip_disable "MSIE [1-6]\.";
@@ -63,7 +33,6 @@ http {
     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
     gzip_comp_level 9;
 
-    # set client body size to 2M #
     client_max_body_size 20M;
 
     root /usr/share/nginx/html;
@@ -100,7 +69,3 @@ http {
     }
   }
 }
-
-#sudo docker pull nginx
-#sudo docker run --name docker-nginx -p 80:80 -v ~/dominate/code/dominate-backend/nginx/nginx.conf:/etc/nginx/nginx.conf nginx
-#sudo docker run --name docker-nginx -p 80:80 -v ~/Documents/freelancing/dominate-backend/config/nginx.conf:/etc/nginx/nginx.conf nginx
