--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,7 @@
     "boom": "7.3.0",
     "bull": "^3.18.0",
     "chalk": "2.4.2",
-    "concurrently": "^6.0.0",
+    "concurrently": "^6.5.1",
     "cookie-parser": "1.4.3",
     "cors": "*",
     "csv-parser": "^2.3.3",
@@ -69,7 +69,7 @@
     "node-schedule": "1.3.0",
     "node-uuid": "1.4.8",
     "nodemailer": "^4.7.0",
-    "nodemon": "1.18.9",
+    "nodemon": "^1.18.9",
     "nylas": "^4.10.0",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
