dockerfiles and few changes

--- a/backend/docker-compose/docker-compose.yml
+++ b/backend/docker-compose/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     links:
     - redis
     build:
-      context: .
+      context: ..
       dockerfile: DockerFile
     command: "npm start"
     image: dominatebackend
