--- a/backend/DockerFile.dev
+++ b/backend/DockerFile.dev
@@ -1,24 +1,24 @@
 FROM node:16.20.2
 
 # Update package repository and install build-essential
-RUN apt-get update && apt-get install -y build-essential
+RUN apt-get update && apt-get install -y build-essential netcat
 
 # Install node-gyp globally
 RUN npm install -g node-gyp
 
-# Install wait-for-it.sh
-COPY wait-for-it.sh /usr/local/bin/wait-for-it.sh
-RUN chmod +x /usr/local/bin/wait-for-it.sh
+WORKDIR /app
 
-# Copy package.json and install dependencies
-COPY package.json ./
+# Copy package.json and package-lock.json
+COPY package*.json /app
+
+# Install dependencies
 RUN npm install
 
+# Install Minio SDK
+RUN npm install minio
+
 # Copy application code
-COPY . .
+COPY . /app
 
 # Expose port
 EXPOSE 9010
-
-# Set the maximum heap size for Node.js and run the application
-CMD ["wait-for-it.sh", "redis:6379", "--", "wait-for-it.sh", "mongo:27017", "--", "wait-for-it.sh", "minio:9000", "--", "node", "--max-old-space-size=4096", "node_modules/.bin/webpack", "--config", "webpack.config.js", "--watch", "&&", "npm", "run", "local"]
